# Microsoft.WindowsAzure.Storage-freebsd

./: README.md
dependencies/: cpprestsdk-2.9.1_13.txz  e2fsprogs-libuuid-1.45.5.txz
samples/QueuesGettingStarted/: Application.cpp  CMakeLists.txt
